# famfold

./: .gitignore  AGENTS.md  LICENSE  README.md  README_train.md  example.fasta  predict.py  pyproject.toml  pyprotect.toml  run_multitemplate_experiment.py  top5.parquet  train.py  train_test.sh
benchmark_runs/: uniprot_benchmark.md
benchmark_runs/fastas/: A4CGL6.fasta  O56264.fasta  P00338.fasta  P00533.fasta  (+20 more)
configs/: afesm_stage1.yaml  afesm_stage1_eval.yaml  stage1.yaml  stage2.yaml
docs/: data_foundations.md  familyfold_plan.md  familyfold_tier1_data.md  familyfold_tier1_inference.md  familyfold_tier1_ops.md  familyfold_tier1_plan_addendum.md  familyfold_tier1_retrieval.md  hypothesis_test.md  inference_routing.md  msa_tier2_plan.md  operations_validation.md  overview.md  retrieval_priors.md
experiments/: __init__.py
hypothesis_test/: __init__.py  baseline_runner.py  cli.py  config.py  example_config.json  minifold_runner.py  pipeline.py  retrieval_metrics.py  sequence_trunk_runner.py  template_features.py
pretests/: __init__.py
scripts/: afesm_move_to_afesm.sh  benchmark_tier1_trunks.py  build_uniprot_benchmark.py  find_top_structs.py  prepare_afdb_subset.py  render_tier1_dashboard.py  run_minifold12l_array.sh  run_minifold12l_task.sh  run_minifold48l_task.sh  sample_mmseqs_clusters.py  stage_afesm_dataset.py
tests/: conftest.py  test_famfold_stage0.py  test_famfold_stage1.py  test_hypothesis_pipeline.py  test_mmseqs_nearest_structures.py  test_sample_mmseqs_clusters.py  test_template_probe.py  test_tier1_benchmark.py  test_tier1_trunk.py
(+77 files in other folders)
