[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minifold"
version = "0.1.0"
requires-python = ">=3.9"
description = "MiniFold"
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "pytorch_lightning",
    "torch>=2.3.0",
    "fair-esm",
    "faesm>=0.1.1",
    "transformers>=4.39.0",
    "biopython==1.81",
    "edit_distance",
    "pandas",
    "modelcif",
    "dm-tree",
    "psutil",
    "click",
    "ml_collections",
    "einops",
    "duckdb",
]

[project.optional-dependencies]
fast = [
    "flash-attn>=2.5.0",
]

[tool.setuptools]
packages = ["minifold", "hypothesis_test", "experiments"]

[tool.setuptools.package-data]
minifold = ["utils/stereo_chemical_props.txt"]
hypothesis_test = ["example_config.json"]
experiments = ["hypothesis_test/example_config.json"]
